--- a/index.html
+++ b/index.html
@@ -1,102 +1,169 @@
 <!DOCTYPE html>
 <html lang="en">
-<head>
-    <meta charset="UTF-8">
-<!-- ADD META TAG REQUIRED TO MAKE PAGE RESPONSIVE-->
-    <meta name="description" content="Vaanguard- Leading the Future of Success. Premier strategic investment and business acceleration firm for high-growth enterprises.">
-    <meta name="keywords" content="business growth, strategic investment, mergers, corporate consulting, digital transformation">
-<!-- ADD META TAG FOR AUTHOR AND YOUR NAME-->
+  <head>
+    <meta charset="UTF-8" />
+    <!-- ADD META TAG REQUIRED TO MAKE PAGE RESPONSIVE-->
+    <meta
+      name="description"
+      content="Vaanguard- Leading the Future of Success. Premier strategic investment and business acceleration firm for high-growth enterprises."
+    />
+    <meta
+      name="keywords"
+      content="business growth, strategic investment, mergers, corporate consulting, digital transformation"
+    />
+    <!-- ADD META TAG FOR AUTHOR AND YOUR NAME-->
     <title>Vanguard | Leading the Future of Success</title>
-<!-- ADD LINK TO YOUR CSS-->
-</head>
+    <!-- ADD LINK TO YOUR CSS-->
+  </head>
 
-<body>
-<!-- WRAP CONTENT IN VALIDATED, SEMANTIC HTML5 (SEE HINTS FOLDER LINKED TO IN THE CANVAS INSTRUCTIONS)-->
-    <h1>Vaanguard</h1>
-        <h2>Main Navigation</h2>
-            About
-            Services
-            Contact
+  <body>
+    <!-- WRAP CONTENT IN VALIDATED, SEMANTIC HTML5 (SEE HINTS FOLDER LINKED TO IN THE CANVAS INSTRUCTIONS)-->
+    <header>
+      <h1>Vaanguard</h1>
+      <h2>Main Navigation</h2>
+      <ul>
+        <li>About</li>
+        <li>Services</li>
+        <li>Contact</li>
+      </ul>
+    </header>
 
-        <h2>Innovation & Investment</h2>
-        We empower businesses to lead the future with high-impact strategies, market intelligence, and financial solutions that drive success.
-        Request a Consultation
+    <main>
+      <h2>Innovation & Investment</h2>
+      <p>
+        We empower businesses to lead the future with high-impact strategies,
+        market intelligence, and financial solutions that drive success.
+      </p>
+      <a href="#">Request a Consultation</a>
 
-        <h2>Our Expertise. Your Edge.</h2>
-        We redefine success by leveraging AI-driven analytics, market intelligence, and high-yield investment strategies to propel businesses forward. Whether you're looking to scale, optimize, or dominate, our strategic expertise delivers results.'
-
+      <h2>Our Expertise. Your Edge.</h2>
+      <p>
+        We redefine success by leveraging AI-driven analytics, market
+        intelligence, and high-yield investment strategies to propel businesses
+        forward. Whether you're looking to scale, optimize, or dominate, our
+        strategic expertise delivers results.'
+      </p>
+      <section id="offer">
         <h2>What We Offer</h2>
-            <h3>Strategic Growth Consulting</h3>
+
+        <section>
+          <h3>Strategic Growth Consulting</h3>
+          <p>
             Unlock new revenue streams and optimize market expansion strategies.
-
-            <h3>High-Impact Investment Solutions</h3>
-            Maximize returns with data-driven portfolio management.
-
-            <h3>Business Acceleration & Mergers</h3>
+          </p>
+        </section>
+        <section>
+          <h3>High-Impact Investment Solutions</h3>
+          <p>Maximize returns with data-driven portfolio management.</p>
+        </section>
+        <section>
+          <h3>Business Acceleration & Mergers</h3>
+          <p>
             Identify opportunities for rapid growth and high-value acquisitions.
+          </p>
+        </section>
+        <section>
+          <h3>Digital Transformation</h3>
+          <p>
+            Stay at the forefront of industry advancements with AI, blockchain,
+            and automation.
+          </p>
+        </section>
+        <section>
+          <h3>Exclusive Executive Advisory Services</h3>
+          <p>
+            Personalized insights and leadership support for C-suite executives
+            and high-net-worth investors.
+          </p>
+        </section>
+        <section>
+          <h3>Corporate Innovation</h3>
+          <p>
+            Strategic implementation of new ideas, technologies, and processes
+            to drive business growth, enhance competitive advantage, and adapt
+            to evolving market demands.
+          </p>
+        </section>
+      </section>
+      <section id="results">
+        <h2>Proven Results</h2>
+        <p>
+          Our data-driven strategies have delivered outstanding ROI, leading to
+          significant revenue growth.
+        </p>
 
-            <h3>Digital Transformation</h3>
-            Stay at the forefront of industry advancements with AI, blockchain, and automation.
+        <h3>Profits</h3>
 
-            <h3>Exclusive Executive Advisory Services</h3>
-            Personalized insights and leadership support for C-suite executives and high-net-worth investors.
+        <table>
+          <tr>
+            <th>Year</th>
+            <th>Revenue ($M)</th>
+            <th>Growth (%)</th>
+          </tr>
+          <tr>
+            <td>2020</td>
+            <td>$120M</td>
+            <td>30%</td>
+          </tr>
+          <tr>
+            <td>2021</td>
+            <td>$180M</td>
+            <td>50%</td>
+          </tr>
+          <tr>
+            <td>2022</td>
+            <td>$250M</td>
+            <td>70%</td>
+          </tr>
+          <tr>
+            <td>2023</td>
+            <td>$340M</td>
+            <td>85%</td>
+          </tr>
+          <tr>
+            <td>2024</td>
+            <td>$420M</td>
+            <td>100%</td>
+          </tr>
+        </table>
 
-            <h3>Corporate Innovation</h3>
-            Strategic implementation of new ideas, technologies, and processes to drive business growth, enhance competitive advantage, and adapt to evolving market demands.
+        <h3>Growth</h3>
+        <!-- CODE PROVIDED FOR YOU, NOTHING TO DO FOR THE BAR CHART IN THE HTML-->
+        <div id="bar-chart">
+          <div class="bar" data-year="2020" style="--height: 30%"></div>
+          <div class="bar" data-year="2021" style="--height: 50%"></div>
+          <div class="bar" data-year="2022" style="--height: 70%"></div>
+          <div class="bar" data-year="2023" style="--height: 85%"></div>
+          <div class="bar" data-year="2024" style="--height: 100%"></div>
+        </div>
+      </section>
 
-            <h2>Proven Results</h2>
-            Our data-driven strategies have delivered outstanding ROI, leading to significant revenue growth.
-
-                <h3>Profits</h3>
-                Year
-                Revenue ($M)
-                Growth (%)
-
-                2020
-                $120M
-                30%
-
-                2021
-                $180M
-                50%
-
-                2022
-                $250M
-                70%
-
-                2023
-                $340M
-                85%
-
-                2024
-                $420M
-                100%
-
-                <h3>Growth</h3>
-<!-- CODE PROVIDED FOR YOU, NOTHING TO DO FOR THE BAR CHART IN THE HTML-->
-                    <div  id="bar-chart">
-                        <div class="bar" data-year="2020" style="--height: 30%;"></div>
-                        <div class="bar" data-year="2021" style="--height: 50%;"></div>
-                        <div class="bar" data-year="2022" style="--height: 70%;"></div>
-                        <div class="bar" data-year="2023" style="--height: 85%;"></div>
-                        <div class="bar" data-year="2024" style="--height: 100%;"></div>
-                    </div>
-
+      <form>
         <h2>Contact Us</h2>
-        Want to take your business to the next level? Get in touch with our elite team today.
+        <p>
+          Want to take your business to the next level? Get in touch with our
+          elite team today.
+        </p>
 
-            Full Name
+        <label for="fullName">Full Name</label>
+        <input type="text" id="fullName" name="fullName" />
+        <label for="emailAddress">Email Address</label>
+        <input type="email" id="emailAddress" name="emailAddress" />
+        <label for="company">Company Name</label>
+        <input type="text" id="company" name="company" />
+        <label for="industry">Industry</label>
+        <input type="text" id="industry" name="industry" />
+        <label for="help">How can we help you?</label>
+        <textarea id="help" name="help" rows="4" cols="50"></textarea>
+        <input type="submit" value="Submit" />
+      </form>
+    </main>
+    <footer>
 
-            Email Address
+        <p>&#169; 2025 Vanguard. For educational purposes only.</p>
+        <p>Email: <a href="mailto:info@vaanguard.com">info@vaanguard.com</a></p>
+        <p>Phone: 480.123.4567</p>
 
-            Company Name
-
-            Industry
-
-            How can we help you?
-
-            Submit
-
-        For educational purposes only. 
-        Email: info@vaanguard.com 
-        Phone: 480.123.4567
+    </footer>
+  </body>
+</html>
