--- a/index.html
+++ b/index.html
@@ -11,7 +11,7 @@
     <meta name="author" content="Izumi">
     <title>Vanguard | Leading the Future of Success</title>
     <!-- ADD LINK TO YOUR CSS-->
-    <link href="/styles.css" rel="stylesheet">
+    <link href="styles.css" rel="stylesheet">
 </head>
 
 <body>
